--- a/app/src/main/res/layout/activity_confirm_password.xml
+++ b/app/src/main/res/layout/activity_confirm_password.xml
@@ -14,6 +14,7 @@
         android:id="@+id/lock"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:layout_margin="20dp"
         app:srcCompat="@drawable/lock" />
 
     <TextView
@@ -64,11 +65,14 @@
                 android:layout_gravity="center"
                 android:layout_marginTop="10dp"
                 android:layout_weight="1"
-                android:text="Change" />
+                android:fontFamily="@font/adamina"
+                android:text="Change"
+                android:textSize="24dp" />
         </com.google.android.material.textfield.TextInputLayout>
 
     </LinearLayout>
 
 </LinearLayout>
+
 
 
