--- a/app/src/main/res/layout/activity_home.xml
+++ b/app/src/main/res/layout/activity_home.xml
@@ -1,75 +1,81 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="#CAF0F8"
-    android:gravity="center"
-    android:orientation="vertical"
-    android:padding="50dp"
     tools:context=".Home">
 
-    <ImageButton
-        android:id="@+id/more"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_gravity="right"
-        android:contentDescription="go to more option"
-        app:srcCompat="@drawable/more" />
-
-    <TextView
-        android:id="@+id/textView6"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_gravity="top"
-        android:layout_marginBottom="30dp"
-        android:fontFamily="@font/adamina"
-        android:text="Add To - do"
-        android:textSize="30sp" />
-
     <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="60dp"
-        android:layout_marginBottom="400dp"
-        android:orientation="horizontal">
+        android:layout_width="0dp"
+        android:layout_height="0dp"
+        android:background="#CAF0F8"
+        android:orientation="vertical"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent">
 
-        <EditText
-            android:id="@+id/task1"
-            android:layout_width="0dp"
+        <ImageView
+            android:id="@+id/more"
+            android:layout_width="89dp"
+            android:layout_height="wrap_content"
+            android:layout_gravity="right"
+            android:layout_marginTop="40dp"
+            app:srcCompat="@drawable/more" />
+
+        <TextView
+            android:id="@+id/textView6"
+            android:layout_width="318dp"
+            android:layout_height="wrap_content"
+            android:layout_marginLeft="50dp"
+            android:layout_marginTop="30dp"
+            android:fontFamily="@font/adamina"
+            android:text="Add To - Do"
+            android:textColor="@color/black"
+            android:textSize="30dp" />
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="369dp"
+            android:layout_marginTop="10dp"
+            android:gravity="top"
+            android:orientation="vertical"
+            android:padding="10dp">
+
+            <ListView
+                android:id="@+id/todoitemlistview"
+                android:layout_width="match_parent"
+                android:layout_height="356dp"
+                android:dividerHeight="10dp"
+                tools:listitem="@layout/list_item">
+
+            </ListView>
+
+        </LinearLayout>
+
+        <LinearLayout
+            android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:layout_weight="1"
-            android:autofillHints=""
-            android:background="#FFFFFF"
-            android:hint="1. To do item"
-            android:padding="10dp"
-            android:textColor="#14EEAC"
-            android:textSize="20sp" />
+            android:gravity="bottom|end"
+            android:orientation="horizontal"
+            android:padding="5dp">
 
-        <ImageButton
-            android:id="@+id/edit"
-            android:layout_width="48dp"
-            android:layout_height="48dp"
-            android:layout_marginStart="8dp"
-            android:background="?attr/selectableItemBackgroundBorderless"
-            android:contentDescription="Edit task"
-            android:src="@drawable/edit" />
+            <ImageView
+                android:id="@+id/img_Add"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginRight="20dp"
+                android:layout_marginBottom="20dp"
+                app:srcCompat="@drawable/add"
+                tools:srcCompat="@drawable/add" />
 
-        <ImageButton
-            android:id="@+id/delete"
-            android:layout_width="48dp"
-            android:layout_height="48dp"
-            android:layout_marginStart="8dp"
-            android:background="?attr/selectableItemBackgroundBorderless"
-            android:contentDescription="Delete task"
-            android:src="@drawable/delete" />
+        </LinearLayout>
+
     </LinearLayout>
+</androidx.constraintlayout.widget.ConstraintLayout>
 
-    <ImageView
-        android:id="@+id/add"
-        android:layout_width="80dp"
-        android:layout_height="wrap_content"
-        android:layout_gravity="right"
-        app:srcCompat="@drawable/add" />
 
-</LinearLayout>
+
+
+
