--- a/app/src/main/res/layout/activity_confirm_password.xml
+++ b/app/src/main/res/layout/activity_confirm_password.xml
@@ -23,6 +23,8 @@
         android:fontFamily="@font/adamina"
         android:text="Create your new password"
         android:textAlignment="center"
+        android:textColor="@color/black"
+        android:textStyle="bold"
         android:textSize="22sp" />
 
     <LinearLayout
@@ -42,7 +44,8 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginBottom="2dp"
-                android:hint="new password" />
+                android:hint="new password"
+                android:textColor="@color/black"/>
         </com.google.android.material.textfield.TextInputLayout>
 
         <com.google.android.material.textfield.TextInputLayout
@@ -56,6 +59,7 @@
                 android:layout_height="wrap_content"
                 android:layout_marginBottom="2dp"
                 android:hint="confirm password"
+                android:textColor="@color/black"
                 android:inputType="textEmailAddress" />
 
             <Button
@@ -64,7 +68,8 @@
                 android:layout_height="wrap_content"
                 android:layout_gravity="center"
                 android:layout_marginTop="10dp"
-                android:layout_weight="1"
+                android:backgroundTint="#242C88"
+                android:textColor="@color/white"
                 android:fontFamily="@font/adamina"
                 android:text="Change"
                 android:textSize="24dp" />
