--- a/app/src/main/res/layout/activity_sign_in.xml
+++ b/app/src/main/res/layout/activity_sign_in.xml
@@ -15,6 +15,8 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:fontFamily="@font/adamina"
+        android:textColor="@color/black"
+        android:textStyle="bold"
         android:text="Sign in"
         android:textSize="32sp" />
 
@@ -35,7 +37,8 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginBottom="2dp"
-                android:hint="Username" />
+                android:hint="Username"
+                android:textColor="@color/black" />
         </com.google.android.material.textfield.TextInputLayout>
 
         <com.google.android.material.textfield.TextInputLayout
@@ -50,7 +53,8 @@
                 android:layout_height="wrap_content"
                 android:layout_marginBottom="2dp"
                 android:hint="Password"
-                android:inputType="textPassword" />
+                android:inputType="textPassword"
+                android:textColor="@color/black"/>
         </com.google.android.material.textfield.TextInputLayout>
 
         <Button
@@ -58,11 +62,11 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="center"
+            android:backgroundTint="#242C88"
+            android:textColor="@color/white"
             android:layout_marginTop="100dp"
             android:layout_marginBottom="10dp"
-            android:background="#C9D1F7"
             android:text="Sign in"
-            android:textColor="@color/black"
             android:textSize="24sp" />
 
         <TextView
@@ -72,6 +76,7 @@
             android:layout_gravity="center"
             android:fontFamily="@font/adamina"
             android:text="Forgot password?"
+            android:textColor="@color/black"
             android:textSize="18dp" />
 
         <LinearLayout
@@ -86,7 +91,8 @@
                 android:layout_height="wrap_content"
                 android:fontFamily="@font/adamina"
                 android:text="don't have an account?"
-                android:textSize="18dp" />
+                android:textSize="18dp"
+                android:textColor="@color/black"/>
 
             <TextView
                 android:id="@+id/txtBtn_signup"
