--- a/app/src/main/res/layout/activity_sign_up.xml
+++ b/app/src/main/res/layout/activity_sign_up.xml
@@ -15,6 +15,8 @@
         android:layout_height="wrap_content"
         android:fontFamily="@font/adamina"
         android:text="Sign up"
+        android:textColor="@color/black"
+        android:textStyle="bold"
         android:textSize="32sp" />
 
     <LinearLayout
@@ -34,7 +36,8 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginBottom="2dp"
-                android:hint="Username" />
+                android:hint="Username"
+                android:textColor="@color/black"/>
         </com.google.android.material.textfield.TextInputLayout>
 
         <com.google.android.material.textfield.TextInputLayout
@@ -49,7 +52,8 @@
                 android:layout_height="wrap_content"
                 android:layout_marginBottom="2dp"
                 android:hint="Password"
-                android:inputType="textPassword" />
+                android:inputType="textPassword"
+                android:textColor="@color/black"/>
         </com.google.android.material.textfield.TextInputLayout>
 
         <com.google.android.material.textfield.TextInputLayout
@@ -64,7 +68,8 @@
                 android:layout_height="wrap_content"
                 android:layout_marginBottom="2dp"
                 android:hint="Confirm Password"
-                android:inputType="textPassword" />
+                android:inputType="textPassword"
+                android:textColor="@color/black"/>
         </com.google.android.material.textfield.TextInputLayout>
 
         <com.google.android.material.textfield.TextInputLayout
@@ -78,7 +83,8 @@
                 android:layout_height="wrap_content"
                 android:layout_marginBottom="2dp"
                 android:hint="Email"
-                android:inputType="textEmailAddress" />
+                android:inputType="textEmailAddress"
+                android:textColor="@color/black"/>
         </com.google.android.material.textfield.TextInputLayout>
 
         <Button
@@ -88,9 +94,9 @@
             android:layout_gravity="center"
             android:layout_marginTop="100dp"
             android:layout_marginBottom="10dp"
-            android:background="#C9D1F7"
+            android:backgroundTint="#242C88"
+            android:textColor="@color/white"
             android:text="Sign up"
-            android:textColor="@color/black"
             android:textSize="24sp" />
 
         <LinearLayout
@@ -105,6 +111,7 @@
                 android:layout_height="wrap_content"
                 android:fontFamily="@font/adamina"
                 android:text="already have an account?"
+                android:textColor="@color/black"
                 android:textSize="18dp" />
 
             <TextView
