--- a/app/src/main/res/layout/activity_forgot_password.xml
+++ b/app/src/main/res/layout/activity_forgot_password.xml
@@ -22,6 +22,8 @@
         android:layout_height="wrap_content"
         android:fontFamily="@font/adamina"
         android:text="Forgot Password?"
+        android:textColor="@color/black"
+        android:textStyle="bold"
         android:textAlignment="center"
         android:textSize="22sp" />
 
@@ -42,7 +44,8 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginBottom="2dp"
-                android:hint="Username" />
+                android:hint="Username"
+                android:textColor="@color/black"/>
         </com.google.android.material.textfield.TextInputLayout>
 
         <com.google.android.material.textfield.TextInputLayout
@@ -56,7 +59,8 @@
                 android:layout_height="wrap_content"
                 android:layout_marginBottom="2dp"
                 android:hint="Email"
-                android:inputType="textEmailAddress" />
+                android:inputType="textEmailAddress"
+                android:textColor="@color/black"/>
         </com.google.android.material.textfield.TextInputLayout>
 
         <LinearLayout
@@ -71,6 +75,7 @@
                 android:layout_height="wrap_content"
                 android:fontFamily="@font/adamina"
                 android:text="Create your new password.."
+                android:textColor="@color/black"
                 android:textSize="18dp" />
 
             <TextView
