--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -31,6 +31,8 @@ android:fontFamily="@font/amita"
 android:text="RemindMe"
 android:textAlignment="center"
 android:textSize="36sp"
+    android:textColor="@color/black"
+    android:textStyle="bold"
 app:layout_constraintBottom_toBottomOf="@+id/imageView"
 app:layout_constraintEnd_toEndOf="parent"
 app:layout_constraintStart_toStartOf="parent"
@@ -44,6 +46,8 @@ android:layout_width="wrap_content"
 android:layout_height="wrap_content"
 android:fontFamily="@font/amita"
 android:text="Stay on tasks with RemindMe"
+    android:textColor="@color/black"
+    android:textStyle="italic"
 android:textAlignment="center"
 android:textSize="25sp"
 app:layout_constraintBottom_toBottomOf="parent"
