--- a/app/src/main/res/layout/activity_home.xml
+++ b/app/src/main/res/layout/activity_home.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.drawerlayout.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
@@ -16,20 +16,15 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent">
 
-        <ImageView
-            android:id="@+id/more"
-            android:layout_width="89dp"
-            android:layout_height="wrap_content"
-            android:layout_gravity="right"
-            android:layout_marginTop="40dp"
-            app:srcCompat="@drawable/more" />
+        <include
+            layout="@layout/manu_toolbar"/>
 
         <TextView
             android:id="@+id/textView6"
-            android:layout_width="318dp"
+            android:layout_width="258dp"
             android:layout_height="wrap_content"
-            android:layout_marginLeft="50dp"
-            android:layout_marginTop="30dp"
+            android:layout_marginLeft="20dp"
+            android:layout_marginTop="10dp"
             android:fontFamily="@font/adamina"
             android:text="Add To - Do"
             android:textColor="@color/black"
@@ -73,9 +68,13 @@
         </LinearLayout>
 
     </LinearLayout>
-</androidx.constraintlayout.widget.ConstraintLayout>
 
+    <RelativeLayout
+        android:layout_width="417dp"
+        android:layout_height="665dp"
+        android:layout_gravity ="start">
 
+        <include layout="@layout/activity_naw_drawer"></include>
 
-
-
+    </RelativeLayout>
+</androidx.drawerlayout.widget.DrawerLayout>
