Add UserProfile layout and DevloperInfo with java files.

--- a/app/src/main/res/layout/activity_developer_info.xml
+++ b/app/src/main/res/layout/activity_developer_info.xml
@@ -25,6 +25,7 @@
         android:fontFamily="@font/adamina"
         android:text="Name: Sonali Punsara"
         android:textSize="24sp"
+        android:textColor="@color/black"
         app:layout_constraintTop_toBottomOf="@id/imageView3"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
@@ -37,6 +38,7 @@
         android:fontFamily="@font/adamina"
         android:text="Student no: 2021T01223"
         android:textSize="24sp"
+        android:textColor="@color/black"
         app:layout_constraintTop_toBottomOf="@id/textView10"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
@@ -49,6 +51,7 @@
         android:fontFamily="@font/adamina"
         android:text="Personal statement:"
         android:textSize="24sp"
+        android:textColor="@color/black"
         app:layout_constraintTop_toBottomOf="@id/textView11"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
@@ -61,6 +64,7 @@
         android:fontFamily="@font/adamina"
         android:text="Undergraduate in University of Colombo"
         android:textSize="20sp"
+        android:textColor="@color/black"
         app:layout_constraintTop_toBottomOf="@id/textView12"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
@@ -73,6 +77,7 @@
         android:fontFamily="@font/adamina"
         android:text="Release version: V1.0"
         android:textSize="24sp"
+        android:textColor="@color/black"
         app:layout_constraintTop_toBottomOf="@id/textView13"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
@@ -84,9 +89,24 @@
         android:layout_height="wrap_content"
         android:fontFamily="@font/adamina"
         android:text="Exit"
+        android:backgroundTint="#242C88"
+        android:textColor="@color/white"
         android:textSize="24sp"
         app:layout_constraintTop_toBottomOf="@id/textView14"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         android:layout_marginTop="40dp" />
+
+    <ImageButton
+        android:id="@+id/back"
+        android:layout_width="80dp"
+        android:layout_height="80dp"
+        android:layout_marginStart="12dp"
+        android:layout_marginTop="36dp"
+        android:background="?attr/selectableItemBackgroundBorderless"
+        android:contentDescription="@string/back"
+        android:onClick="ClickMenu"
+        android:src="@drawable/back"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
 </androidx.constraintlayout.widget.ConstraintLayout>
