--- a/app/src/main/res/layout/activity_user_profile.xml
+++ b/app/src/main/res/layout/activity_user_profile.xml
@@ -24,6 +24,8 @@
         android:layout_height="wrap_content"
         android:fontFamily="@font/adamina"
         android:text="User Details"
+        android:textColor="@color/black"
+        android:textStyle="bold"
         android:textSize="24sp"
         app:layout_constraintTop_toBottomOf="@id/imageView2"
         app:layout_constraintStart_toStartOf="parent"
@@ -35,8 +37,9 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:fontFamily="@font/adamina"
-        android:text="User name: Username_here"
+        android:text="User name: S.P.Nawarathna"
         android:textSize="24sp"
+        android:textColor="@color/black"
         app:layout_constraintTop_toBottomOf="@id/textView7"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
@@ -47,8 +50,9 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:fontFamily="@font/adamina"
-        android:text="Email: sample@email.com"
+        android:text="Email: 2021t01223@stu.cmb.ac.lk"
         android:textSize="24sp"
+        android:textColor="@color/black"
         app:layout_constraintTop_toBottomOf="@id/textView8"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
@@ -60,9 +64,26 @@
         android:layout_height="wrap_content"
         android:fontFamily="@font/adamina"
         android:text="Edit Info"
+        android:backgroundTint="#242C88"
+        android:textColor="@color/white"
         android:textSize="24sp"
         app:layout_constraintTop_toBottomOf="@id/textView9"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         android:layout_marginTop="40dp" />
+
+    <ImageButton
+        android:id="@+id/back"
+        android:layout_width="80dp"
+        android:layout_height="80dp"
+        android:background="?attr/selectableItemBackgroundBorderless"
+        android:contentDescription="@string/back"
+        android:onClick="ClickMenu"
+        android:src="@drawable/back"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        android:layout_marginTop="16dp"
+        android:layout_marginStart="16dp" />
+
 </androidx.constraintlayout.widget.ConstraintLayout>
+
