chance font style from bold to italic

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -32,7 +32,7 @@ android:text="RemindMe"
 android:textAlignment="center"
 android:textSize="36sp"
     android:textColor="@color/black"
-    android:textStyle="bold"
+    android:textStyle="italic"
 app:layout_constraintBottom_toBottomOf="@+id/imageView"
 app:layout_constraintEnd_toEndOf="parent"
 app:layout_constraintStart_toStartOf="parent"
