change font style and font size.

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -30,9 +30,9 @@ android:layout_height="wrap_content"
 android:fontFamily="@font/amita"
 android:text="RemindMe"
 android:textAlignment="center"
-android:textSize="36sp"
+android:textSize="32sp"
     android:textColor="@color/black"
-    android:textStyle="italic"
+    android:textStyle="bold"
 app:layout_constraintBottom_toBottomOf="@+id/imageView"
 app:layout_constraintEnd_toEndOf="parent"
 app:layout_constraintStart_toStartOf="parent"
